# daka

./: .eslintrc.js  .gitignore  Dockerfile  LICENSE.md  README.md  confirm.js  daka.js  example.env  index.js  package-lock.json  package.json
.github/: dependabot.yaml
.github/workflows/: app-ci.yaml  app-release.yaml  cli-ci.yaml  daka.yaml  docker-image.yaml  time-check.yaml  time.yaml
app/: package-lock.json  package.json
app/src/: index.html  main.js  settings.html  style.css
app/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  config.rs  daka.rs  lib.rs  main.rs  notification.rs  scheduler.rs  tray.rs  update_checker.rs
app/src-tauri/src/modules/: femas.rs  mayo.rs  mod.rs
cli/: jest.config.js  package-lock.json  package.json
cli/src/: index.js
cli/src/modules/: femas.js
docs/superpowers/plans/: 2026-03-14-daka-desktop-app.md
docs/superpowers/specs/: 2026-03-14-daka-desktop-app-design.md
scripts/: release.sh
src/: constants.js  daka.js  daka_ori.js  env.js  index.js  index_ori.js  resource.js  utils.js
src/libs/: femas.js  mayo.js
src/modules/: femas.js
src/test/: daka.test.js
src/utils/: resource.js
