[package]
name = "daka"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["cookies", "json"] }
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
thiserror = "2"
dirs = "6"
cocoa = "0.26"
objc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
